# fluidsynth-dssi

./: .gitignore  ChangeLog  Makefile  Makefile.am  README  TODO  autogen.sh  configure.ac
extra/: fluidsynth-1.0.5-bigendian_longlong_patch  fluidsynth-1.0.5-dssi_patch
src/: FluidSynth-DSSI_gtk.c  FluidSynth-DSSI_gtk.h  Makefile.am  fluidsynth-dssi.c  fluidsynth-dssi.h  load_soundfont_metadata.c  load_soundfont_metadata.h  locate_soundfont.c
